--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.1",
-    "express": "^4.15.1"
+    "express": "^4.15.1",
+    "uuid": "^3.0.1"
   }
 }
